Change title of tokenSwitcher

--- a/locales/resources/de.json
+++ b/locales/resources/de.json
@@ -185,5 +185,6 @@
   "Error": "Fehler",
   "Unparsed Address": "Unbekannte Adresse",
   "Choose an authenticated method": "",
-  "Info": "Info"
+  "Info": "Info",
+  "Your tokens": ""
 }
