--- a/locales/resources/en.json
+++ b/locales/resources/en.json
@@ -185,5 +185,6 @@
   "Error": "Error",
   "Unparsed Address": "Unparsed Address",
   "Choose an authenticated method": "Choose an authenticated method",
-  "Info": "Info"
+  "Info": "Info",
+  "Your tokens": "Your tokens"
 }
