--- a/locales/resources/de.json
+++ b/locales/resources/de.json
@@ -39,6 +39,8 @@
   "Copyright": "Copyright",
   "Couldn’t recognize the address or label. Please make sure it’s correct.": "Die Adresse oder Bezeichnung konnte nicht erkannt werden. Bitte überprüfe sie.",
   "Edit bookmark": "Lesezeichen bearbeiten",
+  "Enter an address or search in bookmarks.": "Adresse eingeben oder nach in Lesezeichen suchen.",
+  "Enter an address to send tokens to.": "Adresse eingeben, um Tokens zu senden.",
   "Enter the amount you want to send.": "Gib den Betrag ein, den du versenden willst.",
   "Enter your second passphrase to continue to transaction overview page.": "Gebe deine zweite Passphrase ein, um zu deinen Transaktionen zu gelangen.",
   "Fill in the blanks.": "Bitte die Lücken ausfüllen.",
